--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 
 services:
   web:
@@ -13,3 +13,8 @@ services:
 
   db:
     image: postgres
+    volumes:
+    - postgres_data:/var/lib/postgresql/data/
+
+volumes:
+  postgres_data:
