--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     build: .
-    container_name: django-apache2
+    container_name: web
     ports:
     - '80:80'
     - '3500:3500'
