--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - pip install -r requirements/base.txt
   - pip install coveralls
 before_script:
- - psql -c "create database ap;" -U postgres
+ - psql -c "create database accountant;" -U postgres
 
 # Run tests
 script:
